--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <main>
     <div class="invisibleWrapper">
       <div class="top">
-        <img src="./images/logo.svg" alt="" width="30%" class="logoImg">
+        <img src="./images/logo.svg" alt="" width="30%" style="display: block;" class="logoImg">
         <img src="./images/illustration-mockups.svg" alt="" width="100%" class="wireframeImg">
       </div>
       <div class="bottom">
